[package]
name = "mcircuit"
description = "A library of tools for working with arithmetic circuits on generic fields"
license = "AGPL-3.0"
homepage = "https://github.com/trailofbits/mcircuit"
repository = "https://github.com/trailofbits/mcircuit"
authors = ["Eric Hennenfent <eric.hennenfent@trailofbits.com>"]
readme = "README.md"
keywords = ["cryptography", "zero-knowledge", "circuits", "arithmetic-circuits"]
categories = ["cryptography"]
version = "0.1.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
bincode = "1.3.3"
lexpr = "0.2.5"
num-traits = "0.2"
variant_count = "1.1"
rand = "0.8.4"
